--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,3 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap');
 @import "common.css";
 
 body {
@@ -43,7 +42,7 @@ nav.menu ul {
     list-style: none;
     padding: 0;
 }
-nav.menu ul li a {
+nav.menu a {
     display: flex;
     align-items: center;
     justify-content: flex-start;
@@ -54,24 +53,24 @@ nav.menu ul li a {
     opacity: .6;
     transition: .2s;
 }
-nav.menu ul li a span {flex: 1;}
-nav.menu ul li a svg {
+nav.menu span {flex: 1;}
+nav.menu svg {
     width: 1.25em;
     height: 1.25em;
     margin-right: .5em;
 }
-nav.menu ul li a:hover, nav.menu ul li a:focus {
+nav.menu a:hover, nav.menu a:focus {
     background-color: rgb(255 255 255 / 8%);
     opacity: 1;
 }
-nav.menu ul li a:active, nav.menu ul li a.active {
+nav.menu a:active, nav.menu a.active {
     background-color: rgb(255 255 255 / 8%);
     border-left: 3px solid var(--color-2);
     font-weight: 500;
     opacity: 1;
 }
 @media (max-width: 1199px){
-    nav.menu ul li a {padding: 1em .5em 1em 1em;}
+    nav.menu a {padding: 1em .5em 1em 1em;}
 }
 
 
@@ -133,6 +132,18 @@ tbody tr:nth-child(2n+1){background-color: #FBFBFB;}
 .page-link svg path {fill: #52575C;}
 .page-link.link-disabled svg path {fill:#E8E8E8;}
 
+
+/* блокирование */
+.btn-lock {
+    width: 16px;
+    height: 21px;
+    background: url(../images/icons/unlocked.png) no-repeat center;
+    background-size: contain;
+}
+.btn-lock.locked {
+    background: url(../images/icons/locked.png) no-repeat center;
+    background-size: contain;
+}
 
 
 .mobile-screensaver {
