--- a/css/style.css
+++ b/css/style.css
@@ -15,6 +15,13 @@ body {
         grid-template-columns: 270px auto;
     }
 }
+@media (max-width: 1024px){
+    body {
+        grid-template-areas: 
+        "header header"
+        "main main"; 
+    }
+}
 
 header {
     grid-area: header;
@@ -29,6 +36,17 @@ header {
 .header-btn:hover, .header-btn:active {color: var(--color-1);}
 .header-btn svg path {fill: #fff;}
 .header-btn:hover svg path, .header-btn:active svg path {fill: var(--color-1);}
+.hamburger {display: none;}
+.logo {max-width: 250px;}
+@media (max-width: 1024px){
+    .hamburger {display: block;}
+}
+@media (max-width: 767px){
+    .logo {max-width: 200px;}
+}
+@media (max-width: 575px){
+    .logo {display: none;}
+}
 
 
 aside {
@@ -37,6 +55,7 @@ aside {
     color: #fff;
     height: calc(100vh - 70px);
     overflow-y: auto;
+    padding: 1.5em 0;
 }
 nav.menu ul {
     list-style: none;
@@ -69,8 +88,42 @@ nav.menu a:active, nav.menu a.active {
     font-weight: 500;
     opacity: 1;
 }
+.close-aside {
+    display: none;
+    position: absolute;
+    top: 1em;
+    right: 1em;
+    width: 1em;
+    height: 1em;
+}
+.close-aside svg {
+    width: 100%;
+    height: 100%;
+}
+.close-aside svg path {fill: var(--color-1);}
+.close-aside:hover svg path, .close-aside:active svg path {fill: var(--color-2);}
 @media (max-width: 1199px){
+    aside {padding: 1em 0;}
     nav.menu a {padding: 1em .5em 1em 1em;}
+}
+@media (max-width: 1024px){
+    aside {
+        position: fixed;
+        top: 0;
+        left: -100%;
+        width: 320px;
+        max-width: 100%;
+        height: 100vh;
+        z-index: 10000;
+        transition: .3s;
+        padding: 2em 0 1em;
+    }
+    .close-aside {
+        display: flex;
+    }
+}
+@media (max-width: 575px){
+    aside {width: 100%;}
 }
 
 
@@ -146,6 +199,23 @@ tbody tr:nth-child(2n+1){background-color: #FBFBFB;}
 }
 
 
+/* кнопка публикации */
+.btn-public::before {
+    content: "Ошибка";
+}
+.btn-public[data-state="not-published"]::before {
+    content: "Публиковать";
+}
+.btn-public[data-state="published"] {
+    background-color: #E8E8E8;
+    color: #52575C;
+}
+.btn-public[data-state="published"]::before {
+    content: "Опубликовано";
+}
+
+
+
 .mobile-screensaver {
     display: none;
     position: fixed;
@@ -160,6 +230,6 @@ tbody tr:nth-child(2n+1){background-color: #FBFBFB;}
     align-items: center;
     text-align: center;
 }
-@media (max-width: 1024px){
+/* @media (max-width: 1024px){
     .mobile-screensaver {display: flex;}
-}
+} */
