--- a/css/style.css
+++ b/css/style.css
@@ -214,9 +214,46 @@ tbody tr:nth-child(2n+1){background-color: #FBFBFB;}
     content: "Опубликовано";
 }
 
+/* entrance page */
+#entrance {
+    grid-column: span 2;
+    grid-row: span 2;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+#entrance form {
+    width: calc(100% - 2em);
+    max-width: 550px;
+    background: #FFFFFF;
+    box-shadow: 0px 8px 36px rgba(0, 0, 0, 0.16);
+    text-align: center;
+    padding: 3em;
+}
+.password {
+    position: relative;
+}
+.password input {position: relative;}
+.password button {
+  position: absolute;
+  bottom: .75em;
+  right: 1em;
+  width: 1.25em;
+  height: 1.25em;
+  display: flex;
+}
+.password button[data-state="invisible"] {
+  background: url(../images/icons/eye_closed.svg) no-repeat center;
+  background-size: contain;
+}
+.password button[data-state="visible"] {
+  background: url(../images/icons/eye_open.svg) no-repeat center;
+  background-size: contain;
+}
+.password button img {width: 100%;}
 
 
-.mobile-screensaver {
+/* .mobile-screensaver {
     display: none;
     position: fixed;
     top: 0;
@@ -229,7 +266,7 @@ tbody tr:nth-child(2n+1){background-color: #FBFBFB;}
     justify-content: center;
     align-items: center;
     text-align: center;
-}
+} */
 /* @media (max-width: 1024px){
     .mobile-screensaver {display: flex;}
 } */
